--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-
+spring:
+  datasource:
+    url: jdbc:h2:file:./.data/barmanagement
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: test123
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
