--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
   <properties>
     <java.version>14</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <sonar.projectKey>SRTigers98_othr-sw-barmanagement</sonar.projectKey>
+    <sonar.organization>srtigers98</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencies>
