--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.48</version>
+    </dependency>
+    <dependency>
       <groupId>de.othr.kef41719</groupId>
       <artifactId>swwarehousedtos</artifactId>
       <version>0.0.1-SNAPSHOT</version>
