--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,6 @@ othr:
   warehouse:
     host: http://im-codd.oth-regensburg.de:8950
     customer-number: "00000001"
-  drinks-on-demand: http://im-codd.oth-regensburg.de:8947
+  drinks-on-demand:
+    host: http://im-codd.oth-regensburg.de:8947
+    customer-id: 93d70a8a-3a52-456e-864e-870393774d81
