--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,10 @@ jobs:
       run: ./mvnw clean install -Dmaven.test.skip=true
     - name: Test
       run: ./mvnw test
+    - name: Package
+      run: ./mvnw clean package spring-boot:repackage -Dmaven.test.skip=true
+    - name: Upload Server Jar
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: sw-barmanagement
+        path: ./target/sw-barmanagement-*.jar
