--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   profiles:
     active: prod
 othr:
-  auth: http://im-codd.oth-regensburg.de:8931
+  oth-auth:
+    host: http://im-codd.oth-regensburg.de:8931
   warehouse:
     host: http://im-codd.oth-regensburg.de:8950
     customer-number: "00000001"
