--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -6,6 +6,11 @@
       "description": "Host URL for the OTH-Auth Application."
     },
     {
+      "name": "othr.oth-auth.api-key",
+      "type": "java.lang.String",
+      "description": "API Key for the OTH-Auth Application."
+    },
+    {
       "name": "othr.warehouse.host",
       "type": "java.lang.String",
       "description": "Host URL for the Warehouse Application."
