--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
 othr:
   oth-auth:
     host: http://im-codd.oth-regensburg.de:8931
+    api-key: b4592698e2e5687d1f38d668417e27cf
   warehouse:
     host: http://im-codd.oth-regensburg.de:8950
     customer-number: "00000001"
