Implemented authentication with OTH-Auth

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
       <optional>true</optional>
     </dependency>
@@ -69,6 +73,11 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.48</version>
+    </dependency>
+    <dependency>
+      <groupId>de.othr.brs31213.sw.othauth</groupId>
+      <artifactId>othauth-dto</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>de.othr.kef41719</groupId>
