--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -2,7 +2,7 @@ name: SonarCloud Analysis
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop, master ]
   pull_request:
     branches: [ release/** ]
 
