--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ develop, master ]
   pull_request:
-    branches: [ release/** ]
+    branches: [ develop, master, release/** ]
 
 jobs:
   build:
